# Crypto_Strategy_Backtester

./: README.md  analytics.py  backtest_engine.py  config.py  data_fetcher.py  main.py  options.py  pyproject.toml  run.py
data/cache/: BTCUSDT.parquet
src/btc_backtest/: __init__.py  analytics.py  data_fetcher.py  data_lake.py  engine.py  options.py  settings.py
tests/: test_backtest_integrity.py
