[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "btc_backtest"
version = "0.1.0"
description = "BTC DCA Backtest with Put Spread Hedging"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.2.0",
    "scipy>=1.12.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "ccxt>=4.2.0",
    "matplotlib>=3.8.0",
    "seaborn>=0.13.0",
    "pyarrow>=15.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.mypy]
ignore_missing_imports = true
